Fixed alignment of icons in Content Statistics table on homepage

--- a/docroot/sites/all/themes/chm_theme_kit/css/style.css
+++ b/docroot/sites/all/themes/chm_theme_kit/css/style.css
@@ -8599,6 +8599,15 @@ body.maintenance-page #footer-container #footer {
   clear: both;
   margin-bottom: 1em;
 }
+.pane-ptk-base-chm-content-statistics table > tbody > tr > td:nth-child(2) {
+  position: relative;
+}
+.pane-ptk-base-chm-content-statistics table > tbody > tr > td:nth-child(2) span.fa {
+  position: absolute;
+  right: 100%;
+  top: 50%;
+  transform: translateY(-50%);
+}
 /* Species listing */
 #block-views-species-block-1 .content {
   margin-top: 0;
