--- a/docroot/sites/all/themes/chm_theme_kit/less/content.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/content.less
@@ -41,7 +41,17 @@
     }
   }
 }
-
+.pane-ptk-base-chm-content-statistics{
+  table>tbody>tr>td:nth-child(2){
+    position: relative;
+    span.fa{
+      position: absolute;
+      right: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+}
 /* Species listing */
 #block-views-species-block-1 {
   .content {
